toolchain/internal/core/analysis/testdata/errors/naming/pattern_not_pascal.vdl
// fmt:off
// @expect: E101

pattern lowercase = "events.{id}"
